Fix visible maxima.

--- a/packages/ui/lit-grid/src/dx-grid.pcss
+++ b/packages/ui/lit-grid/src/dx-grid.pcss
@@ -79,7 +79,7 @@ dx-grid {
     & > button.dx-grid__resize-handle {
       position: absolute;
       background: transparent;
-      &:hover, &:focus {
+      &:hover {
         background: var(--dx-hoverSurface)
       }
     }
